# MavPPM-EMB-APP

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: channel_map.cpp  channel_map.hpp  cube_heartbeat.cpp  cube_heartbeat.hpp  link_manager.cpp  link_manager.hpp  main.cpp  mavppm.cpp  mavppm.hpp  package_manager.cpp  package_manager.hpp
src/app/base/: application.cpp  application.hpp
src/app/mavlink/: mavlink_dispatcher.cpp  mavlink_dispatcher.hpp  mavlink_protocol.cpp  mavlink_protocol.hpp
src/app/message_handler/: command_long.cpp  command_long.hpp  imessage_handler.hpp  manual_control.cpp  manual_control.hpp
src/utils/: data.hpp  itrackable.hpp  nocopyable.hpp  random.hpp  runloop.hpp  timer.hpp  user_default.hpp
test/: test_application.cpp
tools/: build_dep.sh  x_build.sh  x_build_dep.sh
